--- a/index.html
+++ b/index.html
@@ -81,7 +81,9 @@
           </ul>
         </section>
       </main>
-      <footer></footer>
+      <footer class="footer">
+        <p class="footer__copyright">&copy; 2022 Mesto Russia</p>
+      </footer>
     </div>
   </body>
 </html>
