--- a/index.html
+++ b/index.html
@@ -80,6 +80,15 @@
             </li>
           </ul>
         </section>
+        <div class="popap popap_opened">
+          <div class="popap__container">
+            <button class="button popup__button-close"></button>
+            <h2 class="popap__title">Редактировать профиль</h2>
+            <input class="popap__input-text" type="text" placeholder="Имя" />
+            <input class="popap__input-text" type="text" placeholder="О себе" />
+            <input class="popap__submit" type="submit" value="Сохранить" />
+          </div>
+        </div>
       </main>
       <footer class="footer">
         <p class="footer__copyright">&copy; 2022 Mesto Russia</p>
