--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
               <p class="profile__subheading">Исследователь океана</p>
             </div>
           </div>
-          <button class="button button_action_add"></button>
+          <button type="button" class="button button_action_add"></button>
         </section>
         <section class="elements">
           <ul class="elements__list list">
@@ -80,19 +80,32 @@
             </li>
           </ul>
         </section>
-        <div class="popap popap_opened">
-          <div class="popap__container">
-            <button class="button popup__button-close"></button>
-            <h2 class="popap__title">Редактировать профиль</h2>
-            <input class="popap__input-text" type="text" placeholder="Имя" />
-            <input class="popap__input-text" type="text" placeholder="О себе" />
-            <input class="popap__submit" type="submit" value="Сохранить" />
-          </div>
-        </div>
       </main>
       <footer class="footer">
         <p class="footer__copyright">&copy; 2022 Mesto Russia</p>
       </footer>
     </div>
+    <div class="popup">
+      <div class="popup__container">
+        <button type="button" class="button popup__button-close"></button>
+        <h2 class="popup__title">Редактировать профиль</h2>
+        <form class="popup__form">
+          <input
+            class="popup__input-text popup__name"
+            type="text"
+            name="name"
+            value="Жак-Ив Кусто"
+          />
+          <input
+            class="popup__input-text popup__job"
+            type="text"
+            name="job"
+            value="Исследователь океана"
+          />
+          <input class="popup__submit" type="submit" value="Сохранить" />
+        </form>
+      </div>
+    </div>
+    <script src="./script.js"></script>
   </body>
 </html>
