Добавить префиксы и фавиконку

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./pages/index.css" />
+    <link rel="shortcut icon" type="image/png" href="favicon.ico" />
     <title>Mesto</title>
   </head>
   <body class="root">
@@ -33,44 +34,64 @@
         <section class="elements">
           <ul class="elements__list list">
             <li class="element">
-              <img src="./images/olhon.jpg" alt="" class="element__image" />
+              <img
+                src="./images/olhon.jpg"
+                alt="Ольхон"
+                class="element__image"
+              />
               <div class="element__footer">
                 <p class="element__title">Ольхон</p>
                 <button class="button button_action_like"></button>
               </div>
             </li>
             <li class="element">
-              <img src="./images/altai.jpg" alt="" class="element__image" />
+              <img
+                src="./images/altai.jpg"
+                alt="Алтай"
+                class="element__image"
+              />
               <div class="element__footer">
                 <p class="element__title">Алтай</p>
                 <button class="button button_action_like"></button>
               </div>
             </li>
             <li class="element">
-              <img src="./images/kamchatka.jpg" alt="" class="element__image" />
+              <img
+                src="./images/kamchatka.jpg"
+                alt="Камчатка"
+                class="element__image"
+              />
               <div class="element__footer">
                 <p class="element__title">Камчатка</p>
                 <button class="button button_action_like"></button>
               </div>
             </li>
             <li class="element">
-              <img src="./images/kinerma.jpg" alt="" class="element__image" />
+              <img
+                src="./images/kinerma.jpg"
+                alt="Кинерма"
+                class="element__image"
+              />
               <div class="element__footer">
                 <p class="element__title">Кинерма</p>
                 <button class="button button_action_like"></button>
               </div>
             </li>
             <li class="element">
-              <img src="./images/dombai.jpg" alt="" class="element__image" />
+              <img
+                src="./images/dombai.jpg"
+                alt="Домбай"
+                class="element__image"
+              />
               <div class="element__footer">
-                <p class="element__title">Домбай</p>
+                <p class="element__title">Карачаево-Черкессия</p>
                 <button class="button button_action_like"></button>
               </div>
             </li>
             <li class="element">
               <img
                 src="./images/kursh-kosa.jpg"
-                alt=""
+                alt="Куршская коса"
                 class="element__image"
               />
               <div class="element__footer">
@@ -106,6 +127,6 @@
         </form>
       </div>
     </div>
-    <script src="./script.js"></script>
+    <script src="./index.js"></script>
   </body>
 </html>
