--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./pages/index.css" />
     <link rel="shortcut icon" type="image/png" href="favicon.ico" />
-    <title>Mesto</title>
+    <title>Место</title>
   </head>
   <body class="root">
     <div class="page text-smoothing">
@@ -127,6 +127,6 @@
         </form>
       </div>
     </div>
-    <script src="./index.js"></script>
+    <script src="./scripts/index.js"></script>
   </body>
 </html>
