--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <header class="header">
         <img src="./images/logo.svg" alt="Место" class="header__logo" />
       </header>
-      <main>
+      <main class="main">
         <section class="profile">
           <div class="profile__info-container">
             <img
@@ -22,14 +22,20 @@
               class="profile__avatar"
             />
             <div class="profile__info">
-              <div class="profile__heading-container">
-                <h1 class="profile__heading">Жак-Ив Кусто</h1>
-                <button class="button button_action_edit"></button>
-              </div>
+              <h1 class="profile__heading">Жак-Ив Кусто</h1>
+              <button
+                type="button"
+                class="button profile__button-edit"
+                aria-label="Edit"
+              ></button>
               <p class="profile__subheading">Исследователь океана</p>
             </div>
           </div>
-          <button type="button" class="button button_action_add"></button>
+          <button
+            type="button"
+            class="button profile__button-add"
+            aria-label="Add"
+          ></button>
         </section>
         <section class="elements">
           <ul class="elements__list list">
@@ -40,8 +46,12 @@
                 class="element__image"
               />
               <div class="element__footer">
-                <p class="element__title">Ольхон</p>
-                <button class="button button_action_like"></button>
+                <h3 class="element__title">Ольхон</h3>
+                <button
+                  type="button"
+                  class="button element__button-like"
+                  aria-label="Like"
+                ></button>
               </div>
             </li>
             <li class="element">
@@ -51,8 +61,12 @@
                 class="element__image"
               />
               <div class="element__footer">
-                <p class="element__title">Алтай</p>
-                <button class="button button_action_like"></button>
+                <h3 class="element__title">Алтай</h3>
+                <button
+                  type="button"
+                  class="button element__button-like"
+                  aria-label="Like"
+                ></button>
               </div>
             </li>
             <li class="element">
@@ -62,8 +76,12 @@
                 class="element__image"
               />
               <div class="element__footer">
-                <p class="element__title">Камчатка</p>
-                <button class="button button_action_like"></button>
+                <h3 class="element__title">Камчатка</h3>
+                <button
+                  type="button"
+                  class="button element__button-like"
+                  aria-label="Like"
+                ></button>
               </div>
             </li>
             <li class="element">
@@ -73,8 +91,12 @@
                 class="element__image"
               />
               <div class="element__footer">
-                <p class="element__title">Кинерма</p>
-                <button class="button button_action_like"></button>
+                <h3 class="element__title">Кинерма</h3>
+                <button
+                  type="button"
+                  class="button element__button-like"
+                  aria-label="Like"
+                ></button>
               </div>
             </li>
             <li class="element">
@@ -84,8 +106,12 @@
                 class="element__image"
               />
               <div class="element__footer">
-                <p class="element__title">Карачаево-Черкессия</p>
-                <button class="button button_action_like"></button>
+                <h3 class="element__title">Карачаево-Черкессия</h3>
+                <button
+                  type="button"
+                  class="button element__button-like"
+                  aria-label="Like"
+                ></button>
               </div>
             </li>
             <li class="element">
@@ -95,8 +121,12 @@
                 class="element__image"
               />
               <div class="element__footer">
-                <p class="element__title">Куршская коса</p>
-                <button class="button button_action_like"></button>
+                <h3 class="element__title">Куршская коса</h3>
+                <button
+                  type="button"
+                  class="button element__button-like"
+                  aria-label="Like"
+                ></button>
               </div>
             </li>
           </ul>
@@ -108,22 +138,24 @@
     </div>
     <div class="popup">
       <div class="popup__container">
-        <button type="button" class="button popup__button-close"></button>
+        <button
+          type="button"
+          class="button popup__button-close"
+          aria-label="Close"
+        ></button>
         <h2 class="popup__title">Редактировать профиль</h2>
-        <form class="popup__form">
+        <form class="popup__form" name="popup-form">
           <input
-            class="popup__input-text popup__name"
+            class="popup__input-text popup__input-text_name"
             type="text"
             name="name"
-            value="Жак-Ив Кусто"
           />
           <input
-            class="popup__input-text popup__job"
+            class="popup__input-text popup__input-text_job"
             type="text"
             name="job"
-            value="Исследователь океана"
           />
-          <input class="popup__submit" type="submit" value="Сохранить" />
+          <input class="button popup__submit" type="submit" value="Сохранить" />
         </form>
       </div>
     </div>
