--- a/index.html
+++ b/index.html
@@ -146,12 +146,12 @@
         <h2 class="popup__title">Редактировать профиль</h2>
         <form class="popup__form" name="popup-form">
           <input
-            class="popup__input-text popup__input-text_name"
+            class="popup__input-text popup__input-text_type_name"
             type="text"
             name="name"
           />
           <input
-            class="popup__input-text popup__input-text_job"
+            class="popup__input-text popup__input-text_type_job"
             type="text"
             name="job"
           />
