--- a/index.html
+++ b/index.html
@@ -159,6 +159,20 @@
         </form>
       </div>
     </div>
+
+    <template id="card-template">
+      <li class="element">
+        <img alt=" " class="element__image" />
+        <div class="element__footer">
+          <h3 class="element__title"></h3>
+          <button
+            type="button"
+            class="button element__button-like"
+            aria-label="Like"
+          ></button>
+        </div>
+      </li>
+    </template>
     <script src="./scripts/index.js"></script>
   </body>
 </html>
