Add handler of Edit and Add buttons

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </section>
         <section class="elements">
           <ul class="elements__list list">
-            <li class="element">
+            <!-- <li class="element">
               <img
                 src="./images/olhon.jpg"
                 alt="Ольхон"
@@ -128,7 +128,7 @@
                   aria-label="Like"
                 ></button>
               </div>
-            </li>
+            </li> -->
           </ul>
         </section>
       </main>
@@ -188,7 +188,6 @@
         </form>
       </div>
     </div>
-
     <template id="card-template">
       <li class="element">
         <img alt=" " class="element__image" />
