Add trash button

--- a/index.html
+++ b/index.html
@@ -191,6 +191,11 @@
     <template id="card-template">
       <li class="element">
         <img alt=" " class="element__image" />
+        <button
+          class="button element__button-trash"
+          type="button"
+          aria-label="Trash"
+        ></button>
         <div class="element__footer">
           <h3 class="element__title"></h3>
           <button
