--- a/index.html
+++ b/index.html
@@ -188,6 +188,35 @@
         </form>
       </div>
     </div>
+    <div class="popup popup_type_image">
+      <div class="popup__container">
+        <button
+          type="button"
+          class="button popup__button-close"
+          aria-label="Close"
+        ></button>
+        <h2 class="popup__title">Новое место</h2>
+        <form class="popup__form" name="popup-form">
+          <input
+            class="popup__input-text popup__input-text_type_title"
+            type="text"
+            name="title"
+            placeholder="Название"
+          />
+          <input
+            class="popup__input-text popup__input-text_type_link"
+            type="text"
+            name="link"
+            placeholder="Ссылка на картинку"
+          />
+          <input
+            class="button popup__submit popup__submit_type_add"
+            type="submit"
+            value="Сохранить"
+          />
+        </form>
+      </div>
+    </div>
     <template id="card-template">
       <li class="element">
         <img alt=" " class="element__image" />
