--- a/index.html
+++ b/index.html
@@ -17,18 +17,18 @@
         <section class="profile">
           <div class="profile__info-container">
             <img
-              src="./images/Avatar.png"
+              src="./images/fedorkonuhov.jpg"
               alt="Аватарка"
               class="profile__avatar"
             />
             <div class="profile__info">
-              <h1 class="profile__heading">Жак-Ив Кусто</h1>
+              <h1 class="profile__heading">Федор Конюхов</h1>
               <button
                 type="button"
                 class="button profile__button-edit"
                 aria-label="Edit"
               ></button>
-              <p class="profile__subheading">Исследователь океана</p>
+              <p class="profile__subheading">Путешественник</p>
             </div>
           </div>
           <button
@@ -38,98 +38,7 @@
           ></button>
         </section>
         <section class="elements">
-          <ul class="elements__list list">
-            <!-- <li class="element">
-              <img
-                src="./images/olhon.jpg"
-                alt="Ольхон"
-                class="element__image"
-              />
-              <div class="element__footer">
-                <h3 class="element__title">Ольхон</h3>
-                <button
-                  type="button"
-                  class="button element__button-like"
-                  aria-label="Like"
-                ></button>
-              </div>
-            </li>
-            <li class="element">
-              <img
-                src="./images/altai.jpg"
-                alt="Алтай"
-                class="element__image"
-              />
-              <div class="element__footer">
-                <h3 class="element__title">Алтай</h3>
-                <button
-                  type="button"
-                  class="button element__button-like"
-                  aria-label="Like"
-                ></button>
-              </div>
-            </li>
-            <li class="element">
-              <img
-                src="./images/kamchatka.jpg"
-                alt="Камчатка"
-                class="element__image"
-              />
-              <div class="element__footer">
-                <h3 class="element__title">Камчатка</h3>
-                <button
-                  type="button"
-                  class="button element__button-like"
-                  aria-label="Like"
-                ></button>
-              </div>
-            </li>
-            <li class="element">
-              <img
-                src="./images/kinerma.jpg"
-                alt="Кинерма"
-                class="element__image"
-              />
-              <div class="element__footer">
-                <h3 class="element__title">Кинерма</h3>
-                <button
-                  type="button"
-                  class="button element__button-like"
-                  aria-label="Like"
-                ></button>
-              </div>
-            </li>
-            <li class="element">
-              <img
-                src="./images/dombai.jpg"
-                alt="Домбай"
-                class="element__image"
-              />
-              <div class="element__footer">
-                <h3 class="element__title">Карачаево-Черкессия</h3>
-                <button
-                  type="button"
-                  class="button element__button-like"
-                  aria-label="Like"
-                ></button>
-              </div>
-            </li>
-            <li class="element">
-              <img
-                src="./images/kursh-kosa.jpg"
-                alt="Куршская коса"
-                class="element__image"
-              />
-              <div class="element__footer">
-                <h3 class="element__title">Куршская коса</h3>
-                <button
-                  type="button"
-                  class="button element__button-like"
-                  aria-label="Like"
-                ></button>
-              </div>
-            </li> -->
-          </ul>
+          <ul class="elements__list list"></ul>
         </section>
       </main>
       <footer class="footer">
@@ -189,32 +98,14 @@
       </div>
     </div>
     <div class="popup popup_type_image">
-      <div class="popup__container">
+      <div class="popup__container-image">
         <button
           type="button"
           class="button popup__button-close"
           aria-label="Close"
         ></button>
-        <h2 class="popup__title">Новое место</h2>
-        <form class="popup__form" name="popup-form">
-          <input
-            class="popup__input-text popup__input-text_type_title"
-            type="text"
-            name="title"
-            placeholder="Название"
-          />
-          <input
-            class="popup__input-text popup__input-text_type_link"
-            type="text"
-            name="link"
-            placeholder="Ссылка на картинку"
-          />
-          <input
-            class="button popup__submit popup__submit_type_add"
-            type="submit"
-            value="Сохранить"
-          />
-        </form>
+        <img class="popup__image" alt="" src="" />
+        <h2 class="popup__title-image"></h2>
       </div>
     </div>
     <template id="card-template">
