Change functions to arrow-f

--- a/index.html
+++ b/index.html
@@ -104,13 +104,20 @@
           class="button popup__button-close"
           aria-label="Close"
         ></button>
-        <img class="popup__image" alt="" src="" />
+        <img
+          class="popup__image"
+          alt="К сожалению, скорости вашей сети не хватает для загрузки фото"
+          src="https://images.unsplash.com/photo-1518020382113-a7e8fc38eac9?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTF8fGZ1bm55JTIwZGV2ZWxvcGVyfGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=500&q=60"
+        />
         <h2 class="popup__title-image"></h2>
       </div>
     </div>
     <template id="card-template">
       <li class="element">
-        <img alt=" " class="element__image" />
+        <img
+          alt="Увы, картинка не загрузилась. Возможно, медленная сеть"
+          class="element__image"
+        />
         <button
           class="button element__button-trash"
           type="button"
