--- a/index.html
+++ b/index.html
@@ -58,11 +58,17 @@
             class="popup__input-text popup__input-text_type_name"
             type="text"
             name="name"
+            minlength="2"
+            maxlength="40"
+            required
           />
           <input
             class="popup__input-text popup__input-text_type_job"
             type="text"
             name="job"
+            minlength="2"
+            maxlength="200"
+            required
           />
           <input class="button popup__submit" type="submit" value="Сохранить" />
         </form>
@@ -82,12 +88,16 @@
             type="text"
             name="title"
             placeholder="Название"
+            minlength="2"
+            maxlength="30"
+            required
           />
           <input
             class="popup__input-text popup__input-text_type_link"
-            type="text"
             name="link"
             placeholder="Ссылка на картинку"
+            type="url"
+            required
           />
           <input
             class="button popup__submit popup__submit_type_add"
@@ -131,5 +141,6 @@
       </li>
     </template>
     <script src="./scripts/index.js"></script>
+    <script src="./scripts/validate.js"></script>
   </body>
 </html>
