--- a/index.html
+++ b/index.html
@@ -53,23 +53,27 @@
           aria-label="Close"
         ></button>
         <h2 class="popup__title">Редактировать профиль</h2>
-        <form class="popup__form" name="popup-form">
+        <form class="popup__form popup__form_user" name="popup-form" novalidate>
           <input
             class="popup__input-text popup__input-text_type_name"
             type="text"
             name="name"
+            id="name"
             minlength="2"
             maxlength="40"
             required
           />
+          <span class="popup__input-error" id="name-error"></span>
           <input
             class="popup__input-text popup__input-text_type_job"
             type="text"
             name="job"
+            id="job"
             minlength="2"
             maxlength="200"
             required
           />
+          <span class="popup__input-error" id="job-error"></span>
           <input class="button popup__submit" type="submit" value="Сохранить" />
         </form>
       </div>
@@ -82,23 +86,27 @@
           aria-label="Close"
         ></button>
         <h2 class="popup__title">Новое место</h2>
-        <form class="popup__form" name="popup-form">
+        <form class="popup__form popup__form_card" name="popup-form" novalidate>
           <input
             class="popup__input-text popup__input-text_type_title"
             type="text"
             name="title"
+            id="title"
             placeholder="Название"
             minlength="2"
             maxlength="30"
             required
           />
+          <span class="popup__input-error" id="title-error"></span>
           <input
             class="popup__input-text popup__input-text_type_link"
             name="link"
             placeholder="Ссылка на картинку"
+            id="url"
             type="url"
             required
           />
+          <span class="popup__input-error" id="url-error"></span>
           <input
             class="button popup__submit popup__submit_type_add"
             type="submit"
