--- a/index.html
+++ b/index.html
@@ -53,7 +53,11 @@
           aria-label="Close"
         ></button>
         <h2 class="popup__title">Редактировать профиль</h2>
-        <form class="popup__form popup__form_user" name="popup-form" novalidate>
+        <form
+          class="popup__form popup__form_user"
+          name="popup-form-user"
+          novalidate
+        >
           <input
             class="popup__input-text popup__input-text_type_name"
             type="text"
@@ -86,7 +90,11 @@
           aria-label="Close"
         ></button>
         <h2 class="popup__title">Новое место</h2>
-        <form class="popup__form popup__form_card" name="popup-form" novalidate>
+        <form
+          class="popup__form popup__form_card"
+          name="popup-form-card"
+          novalidate
+        >
           <input
             class="popup__input-text popup__input-text_type_title"
             type="text"
