--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
         <h2 class="popup__title-image"></h2>
       </div>
     </div>
-    <template id="card-template">
+    <template class="card-template">
       <li class="element">
         <img alt="" class="element__image" />
         <button
@@ -156,7 +156,8 @@
         </div>
       </li>
     </template>
-    <script src="./scripts/index.js"></script>
+    <!-- <script src="./scripts/index.js"></script> -->
+    <script src="./Card.js"></script>
     <script src="./scripts/validate.js"></script>
   </body>
 </html>
