--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
             id="name"
             minlength="2"
             maxlength="40"
+            placeholder="Имя"
             required
           />
           <span class="popup__input-error" id="name-error"></span>
@@ -75,6 +76,7 @@
             id="job"
             minlength="2"
             maxlength="200"
+            placeholder="Профессия"
             required
           />
           <span class="popup__input-error" id="job-error"></span>
@@ -157,8 +159,5 @@
       </li>
     </template>
     <script type="module" src="./scripts/index.js"></script>
-    <script type="module" src="./scripts/Card.js"></script>
-    <!-- <script type="module" src="./scripts/validate.js"></script> -->
-    <script type="module" src="./scripts/FormValidator.js"></script>
   </body>
 </html>
