--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,6 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="./pages/index.css" />
   <link rel="shortcut icon" type="image/png" href="favicon.ico" />
   <title>Место</title>
 </head>
@@ -13,12 +12,12 @@
 <body class="root">
   <div class="page text-smoothing">
     <header class="header">
-      <img src="./images/logo.svg" alt="Место" class="header__logo" />
+      <img src="<%=require('./images/logo.svg')%>" alt="Место" class="header__logo" />
     </header>
     <main class="main">
       <section class="profile">
         <div class="profile__info-container">
-          <img src="./images/fedorkonuhov.jpg" alt="Аватарка" class="profile__avatar" />
+          <img src="<%=require('./images/fedorkonuhov.jpg')%>" alt="Аватарка" class="profile__avatar" />
           <div class="profile__info">
             <h1 class="profile__heading">Федор Конюхов</h1>
             <button type="button" class="button profile__button-edit" aria-label="Edit"></button>
@@ -83,7 +82,6 @@
       </div>
     </li>
   </template>
-  <script type="module" src="./scripts/index.js"></script>
 </body>
 
 </html>
