--- a/src/index.html
+++ b/src/index.html
@@ -85,7 +85,7 @@
           <input
             class="popup__input-text popup__input-text_type_job"
             type="text"
-            name="job"
+            name="about"
             id="job"
             minlength="2"
             maxlength="200"
@@ -139,7 +139,7 @@
       </div>
     </div>
     <div class="popup popup_type_image">
-      <div class="popup__container-image">
+      <div class="popup__container_type_image">
         <button
           type="button"
           class="button popup__button-close"
@@ -154,7 +154,7 @@
       </div>
     </div>
     <div class="popup popup_type_confirm">
-      <div class="popup__container popup__container_confirm">
+      <div class="popup__container_type_confirm popup__container">
         <button
           type="button"
           class="button popup__button-close"
@@ -171,7 +171,7 @@
       </div>
     </div>
     <div class="popup popup_type_avatar">
-      <div class="popup__container popup__container_avatar">
+      <div class="popup__container popup__container_type_avatar">
         <button
           type="button"
           class="button popup__button-close"
