--- a/index.html
+++ b/index.html
@@ -187,11 +187,11 @@
             class="popup__input-text popup__input-text_type_link"
             name="link"
             placeholder="Ссылка на картинку"
-            id="url"
+            id="link-avatar"
             type="url"
             required
           />
-          <span class="popup__input-error" id="url-error"></span>
+          <span class="popup__input-error" id="link-avatar-error"></span>
           <input
             class="button popup__submit popup__submit_type_avatar"
             type="submit"
