--- a/src/index.html
+++ b/src/index.html
@@ -139,7 +139,7 @@
       </div>
     </div>
     <div class="popup popup_type_image">
-      <div class="popup__container_type_image">
+      <div class="popup__container-image">
         <button
           type="button"
           class="button popup__button-close"
